--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,24 @@ img {
   border-bottom: 1px solid #ffffff;
 }
 
+.bestsellers__item {
+  position: relative;
+}
+
+.bestsellers__price {
+  position: absolute;
+  top: 200px;
+}
+
+.price_hit {
+  position: relative;
+}
+
+.price_hit:before {
+  content: '\abe9';
+  position: absolute;
+}
+
 .price__amount {
   font-size: 45px;
   line-height: 45px;
@@ -355,9 +373,13 @@ img {
 
 .additional-info__link {
   border-bottom: 1px solid #ffffff;
+  position: relative;
 }
 
 .additional-info__link--heart::before {
+  position: absolute;
+  left: -20px;
+
   width: 15px;
   height: 13px;
   background-image: url('../img/heart.svg');
@@ -425,8 +447,11 @@ img {
 /* Строим сетку */
 
 .main-header {
+  position: relative;
+
   flex-direction: column;
   align-items: center;
+  margin-bottom: 50px;
 }
 
 .container {
@@ -486,6 +511,9 @@ img {
 }
 
 .main-header__info {
+  position: absolute;
+  top: 100%;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -493,7 +521,6 @@ img {
 
   padding: 0;
   /* временно, пока нет слайдера */
-  margin-bottom: 50px;
   width: 100%;
 }
 
@@ -627,7 +654,7 @@ img {
 
   margin: 0;
 
-  width: 560px;
+  /* width: 560px; */
 }
 
 .main-footer__copyright {
